cmake_minimum_required(VERSION 3.15)
PROJECT (LuTool CXX)

set(CMAKE_CXX_STANDARD 17)  
set(CMAKE_CXX_STANDARD_REQUIRED True)  
option(LUTOOL_EXPORTS_OPTION "Enable export" ON)
option(SAMPLE "Enable Sample" OFF)
if(LUTOOL_EXPORTS_OPTION)
	add_definitions(-DLUTOOL_EXPORTS_OPTION)
endif()
set (CMAKE_BUILD_TYPE Release CACHE STRING "build type(Debug,Release)")

if(CMAKE_BUILD_TYPE MATCHES Release)
set(FMT_DIR "D:/Soft/FMT_Rel")
else()
set(FMT_DIR "D:/Soft/FMT")
endif()
set(fmt_DIR "${FMT_DIR}/lib/cmake/fmt")
find_package(fmt REQUIRED)


include(CMake/Utils.cmake)
ADD_SUBDIRECTORY (Source)
if(SAMPLE)
	ADD_SUBDIRECTORY (Sample)
endif()
